cluster/apps/kanbn/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kanbn-db
  namespace: kanbn
spec:
  serviceName: kanbn-db
  replicas: 1
  selector:
    matchLabels:
      app: kanbn-db
  template:
    metadata:
      labels:
        app: kanbn-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kanbn-db-data
