cluster/apps/kanbn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanbn
  namespace: kanbn
  labels:
    app: kanbn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanbn
  template:
    metadata:
      labels:
        app: kanbn
    spec:
      containers:
        - name: web
          image: ghcr.io/kanbn/kan:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 160Mi
            limits:
              memory: 192Mi
