cluster/apps/kanbn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanbn
  namespace: kanbn
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: kanbn
