cluster/apps/kanbn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanbn
  namespace: kanbn
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "kanbn.${SECRET_DOMAIN}"
      secretName: kanbn-tls
  rules:
    - host: "kanbn.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kanbn
                port:
                  number: 3000
